# ICAIF_stablecoin-abm

./: .gitignore  CITATION.cff  CLAIMS_AND_EVIDENCE.md  Makefile  README.md  RESULTS.md  TODO.md  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml  interventions.yaml
experiments/results/netcontagion/: rl_no_origin_flag.json  rl_regulator_usdt_may.json
paper/: policy_supplement.md
paper/sections/: 03_calibration.md
paper/standalone_abm_paper/: README.md  main.tex  references.bib
scripts/: compile_multi_episode_table.py  compile_policy_recommendations.py  extra_figures.py  make_causal_join_figure.py  run_budget_optimization.py  run_calibration_uncertainty.py  run_exposure_join.py  run_intervention_sweep.py  run_intervention_timing.py  run_multi_episode_join.py  run_netcontagion_join.py  run_partial_backstop.py  run_placebo_control.py  run_rl_convergence.py  run_rl_cross_crisis.py  run_rl_no_origin_flag.py  run_rl_regulator.py  run_rl_regulator_usdt_may.py  run_robustness_welfare.py  run_welfare_analysis.py
src/stablesim/: __init__.py
src/stablesim/agents/: __init__.py  arbitrageur.py  base.py  issuer.py  lp.py  noise.py  redeemer.py
src/stablesim/analysis/: __init__.py  metrics.py  plots.py
src/stablesim/calibration/: __init__.py  optimizer.py  targets.py
src/stablesim/engine/: __init__.py  amm.py  market.py  orderbook.py  reserves.py
src/stablesim/experiments/: __init__.py  interventions.py  runner.py  sweep.py
src/stablesim/netcontagion/: __init__.py  (+3 more)
tests/: test_agents.py  test_amm.py  test_metrics.py  test_netcontagion.py
(+6 files in other folders)
